k8s/redis-depl.yaml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-depl
  namespace: default
  labels:
    app: redis
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container:  redis-depl
      labels:
        app: redis
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name: redis
        image: redis:latest
        imagePullPolicy: IfNotPresent
      restartPolicy: Always
---
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: redis-srv
  namespace: default
spec:
  selector:
    app: redis
  type: ClusterIP
  ports:
  - name: redis-srv
    protocol: TCP
    port: 6379
    targetPort: 6379
---
