k8s/ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudly-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
      #nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: cloudly.127.0.0.1.nip.io
    http:
      paths:

      - path: /deploy
        pathType: ImplementationSpecific
        backend:
          service:
            name: deploy-srv
            port:
              number: 5002
      - path: /upload
        pathType: ImplementationSpecific
        backend:
          service:
            name: upload-srv
            port:
              number: 5001
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth-srv
            port:
              number: 5000
---
